objects/Allstream_Allstar_IT_Nomination__c/Allstream_Allstar_IT_Nomination__c.object-meta.xml
<CustomObject>
    <label>Allstream Allstar Nomination</label>
    <nameField>
        <displayFormat>Nomination-{000000}</displayFormat>
        <label>Recognition Nominations Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allstream Allstar Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>