objects/Allstream_Allstar_IT_Nomination__c/fields/ManagerL__c.field-meta.xml
<CustomField>
    <fullName>ManagerL__c</fullName>
    <formula>Nominee__r.Manager.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManagerL</label>
    <type>Text</type>
</CustomField>