objects/Allstream_Allstar_IT_Nomination__c/fields/Nominee__c.field-meta.xml
<CustomField>
    <fullName>Nominee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Allstream_Allstar_IT_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>